--- a/.streamlit/secrets.toml.sample
+++ b/.streamlit/secrets.toml.sample
@@ -11,8 +11,8 @@
 # Everything in this section will be available as an environment variable
 my_name = "John"
 cloud_api_uri = "https://url_of_your_api_on_google_cloud.run.app"
-local_api_uri = "https://localhost:8000"
-local_docker_uri = "https://localhost:8080"
+local_api_uri = "https://pocketcoach-220311402541.europe-west1.run.app/"
+local_docker_uri = "https://pocketcoach-220311402541.europe-west1.run.app/"
 
 
 # You can also add other sections if you like.
